# ROV26

./: .gitattributes  .gitignore  .gitmodules  .project  LICENSE  README.md  camera_display.py  copilot_tab.py  cv.py  gui_window.py  main.py  pilot_tab.py  requirements.txt  rov26.code-workspace  sample_config.yaml  updated_sample_config.yaml
R&D/software/: .gitignore  frame split.py  length_measurment.py  pyproject.toml
SOFTWARE/communication/: stm32.py
console/: .gitignore  .gitmodules  README.md  ROV Console.spec  build_opencv.sh  cam1.sdp  cam2.sdp  cam3.sdp  collect_gst_linux.sh  float_example_log.csv  pixi.toml  pyproject.toml  test.py  test.sdp  test2.py
console/scripts/: get_opencv.ps1  get_opencv.py  get_opencv.sh  get_opencv_wheel.py  setup_venv.ps1  setup_venv.sh
console/src/console/: __main__.py  app.py  resources.py
console/src/console/assets/: DirectionArrow.qml  HorizontalThruster.qml  VerticalThruster.qml  __init__.py  compassWidget.qml  default_settings.ini  default_settings_linux.ini  default_settings_win32.ini  depth.qml  pitchRoll.qml  thrusterLayout.qml
console/src/console/comms/: comms.py  float_messages.py  manager.py  messages.py  stm32.py
console/src/console/comms/float/: file_receiver.py
console/src/console/comms/float_mqtt/: main.py
console/src/console/comms/rov/: messages.py  stm32.py  stm_programmer.py
console/src/console/core/: active_joystick.py  active_joystick.pyi  app.py  gamepad.py  joystick.py  settings.py
console/src/console/core/comms/: .serial.py  comms.py  stm32.py
console/src/console/core/gamepad/: gamepad.py
console/src/console/core/vision/: camera.py  gstreamer.py
console/src/console/env/: pathing.py  settings.py  third_party.py
console/src/console/gui/: analysis_view.py  auto_control_input.py  camera_display.py  compass.py  copilot_tab.py  cv_camera.py  cv_tab.py  float_tab.py  leakage_display.py  main_window.py  menubar.py  pilot_tab.py  pilot_tab_new.py  pitch_roll.py  screenshot_view.py  splash_screen.py  status_widget.py  thruster_layout.py
console/src/console/gui/common/: camera_display.py  combobox.py  tab.py
console/src/console/gui/connections_tab/: __init__.py  container.py  serial_tab.py
console/src/console/gui/cv_tab/: __init__.py  analysis_view.py  container.py  cv_camera.py  screenshot_view.py
console/src/console/gui/float_tab/: __init__.py  container.py  message_bar.py
console/src/console/gui/joystick_tab/: __init__.py  container.py
console/src/console/gui/model/: orientation_data.py  rovData.py  rov_data.py  sensors.py  thruster_status.py
console/src/console/gui/pilot_tab/: __init__.py  auto_control_input.py  container.py  leakage_display.py  status_widget.py
console/src/console/gui/serial_tab/: __init__.py  container.py
console/src/console/gui/settings_tab/: container.py  file_setting.py
console/src/console/settings/: __init__.py  relative_path.py
console/src/core/concurrent/: callback_worker.py
console/src/core/math/: exponential_filter.py  pwm.py
console/src/hal/camera/: camera.py
console/src/hal/joystick/: __init__.py  active_joystick.py  exceptions.py  inputs.py  joystick.py  listeners.py  manager.py
console/src/hal/serial/: serial_device.py  stm32.py
console/src/lib/device/: joystick.py  joystick.pyi
console/src/lib/joystick/: __init__.py  active_joystick.py  joystick.py  listeners.py  manager.py
firmware/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
firmware/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
float/firmware/: .gitignore  platformio.ini
float/software/: .gitignore  log.csv  (+2 more)
opencv-build/: .gitignore  README.md  build_opencv.ps1  patch_opencv.py  pyproject.toml
(+251 files in other folders)
