[project]
name = "console"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Youssef Samy", email = "office.youssefkassem@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "annotated-types>=0.7.0",
    "build>=1.4.0",
    "cv2-enumerate-cameras>=1.3.3",
    "nuitka>=4.0.1",
    "opencv-python>=4.13.0.92; sys_platform == 'win32'",
    "opencv-python @ file:///${PROJECT_ROOT}/wheels/opencv_python-4.13.0.92-cp311-cp311-linux_x86_64.whl ; sys_platform == 'linux' and python_version == '3.11'",
    "opencv-python @ file:///${PROJECT_ROOT}/wheels/opencv_python-4.13.0.92-cp312-cp312-linux_x86_64.whl ; sys_platform == 'linux' and python_version == '3.12'",
    "opencv-python @ file:///${PROJECT_ROOT}/wheels/opencv_python-4.13.0.92-cp313-cp313-linux_x86_64.whl ; sys_platform == 'linux' and python_version == '3.13'",
    "opencv-python @ file:///${PROJECT_ROOT}/wheels/opencv_python-4.13.0.92-cp314-cp314-linux_x86_64.whl ; sys_platform == 'linux' and python_version == '3.14'",
    "pygame-ce>=2.5.7",
    "pyinstaller>=6.19.0",
    "pyserial>=3.5",
    "pyside6>=6.10.2",
    "requests>=2.32.5",
]

[tool.uv]
find-links = ["wheels"]

[dependency-groups]
build-opencv = [
    "numpy==2.0.2; python_version >= '3.9' and python_version < '3.13'",
    "numpy==2.1.3; python_version == '3.13'",
    "numpy==2.3.2; python_version == '3.14'",
    "build",
    "setuptools==59.2.0; python_version < '3.12'",
    "setuptools<70.0.0; python_version >= '3.12'",
    "wheel",
    "scikit-build",
    "pip"
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[project.scripts]
console = "console.app:run"
