[tool.uv]
find-links = ["wheels"]


[project]
name = "console"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Youssef Samy", email = "office.youssefkassem@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "annotated-types>=0.7.0",
    "build>=1.4.0",
    "cv2-enumerate-cameras>=1.3.3",
    "nuitka>=4.0.1",
    "opencv-python>=4.13.0.92",
    "pygame-ce>=2.5.7",
    "pyinstaller>=6.19.0",
    "pyserial>=3.5",
    "pyside6>=6.10.2",
    "requests>=2.32.5",
    "gstreamer-libs>=1.28.1 ; sys_platform != 'linux'",
    "gstreamer-plugins>=1.28.1 ; sys_platform != 'linux'",
    "gstreamer-plugins-restricted>=1.28.1 ; sys_platform != 'linux'",
]


[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[project.scripts]
console = "console.app:run"
