[project]
name = "console"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Youssef Samy", email = "office.youssefkassem@gmail.com" }
]
requires-python = ">=3.11,<=3.14"
dependencies = [
    "annotated-types",
    "cv2-enumerate-cameras",
    "pygame-ce",
    "pyserial",
    "requests",
]


[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[project.scripts]
console = "console.app:start_console"
