[project]
name = "gstreamer-opencv-build"
version = "0.1.0"
description = "A project to build opencv-python wheels with gstreamer support"
readme = "README.md"
authors = [
    { name = "Youssef Samy", email = "office.youssefkassem@gmail.com" }
]
classifiers = [
    "Operating System :: Microsoft :: Windows",
]

requires-python = ">=3.11"
dependencies = [
    "wheel", # for patching the wheel
    "pip", # for actually building
]
